--- a/EmployeeSQL/bonus.ipynb
+++ b/EmployeeSQL/bonus.ipynb
@@ -21,6 +21,7 @@
     "rcParams['axes.spines.top'] = False\n",
     "rcParams['axes.spines.right'] = False\n",
     "\n",
+    "#import password to use when pulling in postgres data below\n",
     "from cred import p\n",
     "\n",
     "from sqlalchemy import create_engine\n",
@@ -104,6 +105,7 @@
     }
    ],
    "source": [
+    "#read in postgres salaries table as pandas df\n",
     "salaries_df = pd.read_sql('SELECT * FROM salaries',connection)\n",
     "salaries_df.head()"
    ]
@@ -126,6 +128,7 @@
     }
    ],
    "source": [
+    "#Create a histogram to visualize the most common salary ranges for employees\n",
     "plt.hist(salaries_df.salary)\n",
     "plt.title(\"Histogram of Employee Salaries\")\n",
     "plt.xlabel(\"Salary ($)\")\n",
@@ -190,56 +193,17 @@
        "      <td>40000</td>\n",
        "      <td>Senior Engineer</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>300019</th>\n",
-       "      <td>40000</td>\n",
-       "      <td>Staff</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>300020</th>\n",
-       "      <td>40000</td>\n",
-       "      <td>Technique Leader</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>300021</th>\n",
-       "      <td>59703</td>\n",
-       "      <td>Senior Engineer</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>300022</th>\n",
-       "      <td>48038</td>\n",
-       "      <td>Senior Engineer</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>300023</th>\n",
-       "      <td>40000</td>\n",
-       "      <td>Senior Engineer</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>300024 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        salary             title\n",
-       "0        48973          Engineer\n",
-       "1        40000   Senior Engineer\n",
-       "2        43548  Technique Leader\n",
-       "3        63377             Staff\n",
-       "4        40000   Senior Engineer\n",
-       "...        ...               ...\n",
-       "300019   40000             Staff\n",
-       "300020   40000  Technique Leader\n",
-       "300021   59703   Senior Engineer\n",
-       "300022   48038   Senior Engineer\n",
-       "300023   40000   Senior Engineer\n",
-       "\n",
-       "[300024 rows x 2 columns]"
+       "   salary             title\n",
+       "0   48973          Engineer\n",
+       "1   40000   Senior Engineer\n",
+       "2   43548  Technique Leader\n",
+       "3   63377             Staff\n",
+       "4   40000   Senior Engineer"
       ]
      },
      "execution_count": 4,
@@ -248,13 +212,15 @@
     }
    ],
    "source": [
+    "#created a view in pgadmin of salary and title values, named \"salary_titles\"\n",
+    "#read in this saved view as df\n",
     "salary_titles_df = pd.read_sql('SELECT * FROM salary_titles',connection)\n",
-    "salary_titles_df"
+    "salary_titles_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "853c8cc5-51d5-4c7b-9b32-cfa2a9032800",
    "metadata": {},
    "outputs": [
@@ -331,20 +297,22 @@
        "Technique Leader    48582.896092"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#group data by title and find average salary within each group\n",
     "avg_salary_titles = salary_titles_df.groupby(\"title\").mean()[\"salary\"]\n",
+    "#convert series to df and rename salary column to avg_salary\n",
     "avg_salary_titles = avg_salary_titles.to_frame().rename(columns={\"salary\":\"avg_salary\"})\n",
     "avg_salary_titles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "59ee45a8-af47-4e69-bd97-dd402718d30f",
    "metadata": {},
    "outputs": [
@@ -360,6 +328,7 @@
     }
    ],
    "source": [
+    "#Create a bar chart of average salary by title\n",
     "avg_salary_titles.plot.bar(title=\"Average Salary by Title\", xlabel=\"Employee Title\", ylabel=\"Average Salary ($)\", rot=45, legend=None)\n",
     "plt.xticks(ha=\"right\")\n",
     "plt.show()"
@@ -369,14 +338,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b988e507-c675-467b-a67b-00d0fd849da0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cbb2e6d0-6360-4e87-8cda-50058eabe741",
    "metadata": {},
    "outputs": [],
    "source": []
